implemented database logic through Docker and Postgres. Finished Cars module. Added Users creation logic.
